--- a/src/partials/welcome.html
+++ b/src/partials/welcome.html
@@ -17,8 +17,8 @@
         <a class="welcome__btn" href="#location">
           <span class="welcome__btn-text">Find location</span>
           <span class="welcome__btn-icon" aria-hidden="true">
-            <svg class="welcome__btn-svg" width="18" height="18">
-              <use href="/images/icons.svg#icon-map"></use>
+            <svg class="welcome__btn-svg" width="24" height="24">
+              <use href="/images/icons.svg#icon-map-pin"></use>
             </svg>
           </span>
         </a>
