--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,16 +1,4 @@
 /* #region Subscribe*/
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 
 .subscribe-title {
   margin-bottom: 24px;
@@ -72,7 +60,8 @@
     inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  /* margin-top: 24px; */
+}
 
 .input-subscribe {
   outline: none;
@@ -84,9 +73,11 @@
   height: 40px;
   background-color: #e0cbb4;
   border: 1px solid rgba(11, 8, 3, 0.15);
-   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-              background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-subscribe:focus {
+  border-color: #6f4e37;
 }
 
 .submit:hover,
@@ -109,10 +100,6 @@
   border-color: #7f1c1c;
 }
 
-.input-subscribe:focus {
-  border-color: rgba(11, 8, 3, 0.4);
-}
-
 .error-message {
   color: #7f1c1c;
   font-weight: 400;
@@ -125,8 +112,14 @@
   transition: opacity 0.2s ease;
 }
 
-input:not(:placeholder-shown):invalid+.error-message {
-  display: block;
+.label-subscribe .error-message {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.label-subscribe
+  .input-subscribe:not(:placeholder-shown):invalid
+  ~ .error-message {
   opacity: 1;
   visibility: visible;
 }
@@ -139,7 +132,6 @@ input:not(:placeholder-shown):invalid+.error-message {
 
 /* #region Media Tablet*/
 @media screen and (min-width: 768px) {
-
   .form-subscribe {
     display: flex;
     gap: 24px;
@@ -163,25 +155,25 @@ input:not(:placeholder-shown):invalid+.error-message {
   .blok-form p {
     margin-top: 16px;
   }
-
 }
 
 @media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {}
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+}
 
 /* #endregion Media Tablet*/
 
 /* #region Media Desktop*/
 @media screen and (min-width: 1440px) {
-  .container {
+  .subscribe-container {
     max-width: 1440px;
     display: flex;
     gap: 32px;
   }
 
-  .section-title {
-    font-size: 48px
+  .subscribe-title {
+    font-size: 48px;
   }
 
   .wraper {
@@ -191,7 +183,6 @@ input:not(:placeholder-shown):invalid+.error-message {
   .form-subscribe {
     gap: 16px;
   }
-
 }
 
 /* #endregion Media Desktop*/
