--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container">
+  <div class="container subscribe-container">
     <div class="wraper">
       <h2 class="subscribe-title section-title">Join Our Coffee Community</h2>
       <p class="subscribe-text">
@@ -9,17 +9,16 @@
       <div class="blok-form">
         <form class="form-subscribe">
           <label class="label-subscribe" for="input-subscribe">
-            <span class="visually-hidden">Email address</span>
+            <span class="visually-hidden">Email</span>
             <input
               class="input-subscribe"
               type="email"
               id="input-subscribe"
               name="input-subscribe"
               placeholder="Your Email Here"
+              required
             />
-            <span class="error-message">
-              Incorrect email format. Please try again.
-            </span>
+            <span class="error-message">Please enter a valid email</span>
           </label>
           <button class="submit" type="submit">
             Subscribe
